[package]
name = "re_set-lib"
version = "2.5.3"
edition = "2021"
description = "Data structure library for ReSet"
repository = "https://github.com/Xetibo/ReSet-Lib"
license = "GPL-3.0-only"

[dependencies]
directories-next = "2.0.0"
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
pulse = { version = "2.0", package = "libpulse-binding" }
