[package]
name = "re_set-lib"
version = "5.2.0"
edition = "2021"
description = "Data structure library for ReSet"
repository = "https://github.com/Xetibo/ReSet-Lib"
license = "GPL-3.0-or-later"

[dependencies]
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
pulse = { version = "2.0", package = "libpulse-binding" }
once_cell = "1.19.0"
libloading = "0.8.3"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_12"] }
serial_test = "3.0.0"
toml = "0.8.12"
xdg = "2.5.2"
